# langchain-agents

./: README.md  pyproject.toml
chapter1-basics/: article.txt  langchain_basics.py  ollama_basics.py
chapter2-langsmith/: langsmith_basics.ipynb
chapter3-prompting/: prompting.ipynb
chapter4-chat-memory/: chat_memory.ipynb
chapter5-agents/: agents.ipynb
chapter6-lcel/: lcel.ipynb
