[project]
name = "langchain-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docarray>=0.41.0",
    "fastapi>=0.115.12",
    "google-search-results>=2.4.2",
    "ipykernel>=6.29.5",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.60",
    "langchain-ollama>=0.3.3",
    "langsmith>=0.3.42",
    "ollama>=0.4.8",
    "uvicorn>=0.34.2",
]
